--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,53 @@
+body {
+  font-family: sans-serif;
+}
+
+/* Navigation styles */
+#main-menu ul {
+  list-style-type: none;
+  padding-left: 10px;
+  position: relative
+}
+
+#main-menu li {
+  float: left
+}
+
+#main-menu li a {
+  background: #778899;
+  text-decoration: none;
+  padding: 10px 20px;
+  display: block
+}
+
+#main-menu li a:hover {
+  background: skyblue;
+  color: black
+}
+
+/* sub menu styles */
+#main-menu ul li ul {
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 1s, opacity 1s linear
+}
+
+#main-menu ul li:hover ul {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s
+}
+
+#main-menu ul li ul li {
+  float: none;
+  background: #778899
+}
+
+#main-menu ul li ul li:hover {
+  background: magenta
+}
+
 #main {
   width:53%;
   height:30em;
@@ -23,7 +73,9 @@ aside {
   -webkit-box-sizing:border-box;
   box-sizing:border-box;
 }
-
+nav {
+  margin-bottom: 4em;
+}
 footer, header {
   clear:both;
   border: 0.2em solid red;
